@@ -1,3 +1,8 @@
+2015-03-14  Jakub Jelinek  <jakub@redhat.com>
+
+	PR rtl-optimization/65401
+	* gcc.c-torture/execute/pr65401.c: New test.
+
 2015-03-13  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
 	PR target/64600
